@@ -2933,6 +2933,7 @@ def suite():
 
 
 if __name__ == '__main__':
+    common.print_versions()
     unittest.main(defaultTest='suite')
 
 ## Local Variables:
