@@ -2905,7 +2905,9 @@ def suite():
 
     return theSuite
 
+
 if __name__ == '__main__':
+    common.print_versions()
     unittest.main(defaultTest='suite')
 
 ## Local Variables:
