@@ -3008,6 +3008,7 @@ def suite():
 
 
 if __name__ == '__main__':
+    common.print_versions()
     unittest.main(defaultTest='suite')
 
 ## Local Variables:
