@@ -372,8 +372,8 @@ def suite():
 
 
 if __name__ == '__main__':
+    common.print_versions()
     unittest.main(defaultTest='suite')
-
 
 
 ## Local Variables:
