@@ -4619,5 +4619,7 @@ def suite():
 
     return theSuite
 
+
 if __name__ == '__main__':
+    common.print_versions()
     unittest.main(defaultTest='suite')
